working-assets/css/pdp.css
form#atc_form {
  margin-bottom: 0.75rem;

  & .yotpo-reviews-star-ratings-widget {
    margin: 0 0 -10px 0 !important;
  }

  & .atc_form-sizes {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(calc(25% - 0.5em), 70px));
    gap: 0.5em;
    justify-content: start;

    &:last-of-type {
      margin-bottom: 0;
    }
  }

  & input[type='radio'] {
    display: none;
  }

  & label {
    border: 1px var(--c-black) solid;
    width: 100%;
    padding-inline: 0;

    &::after {
      background-color: var(--c-off-white);
    }

    &:hover::after {
      top: 0;
    }
  }


  .part-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 1rem;

    &>a {
      display: flex;
      align-items: center;
      gap: 0.25rem;
    }
  }

  .part_title {
    color: var(--c-dark-grey);
    text-align: left;
    margin: 0;
    font-weight: 700;
  }

  input[type='radio']:checked+label {
    border: 1px solid var(--c-grey);

    &::after {
      top: 0;
      background-color: var(--c-light-grey);
    }
  }

  input[type='radio']:disabled+label {
    color: var(--c-grey);
    border: 1px solid var(--c-light-grey);
    overflow: hidden;

    &:after {
      rotate: -33deg;
      top: 50%;
      height: 1px;
      background-color: var(--c-light-grey);
    }
  }

  .atc_form-header {
    display: flex;
    flex-flow: row nowrap;
    border-top: 1px solid var(--c-grey);
    padding-top: 1em;
    justify-content: space-between;
    align-items: center;

    & svg {
      height: 2em;
    }

    & a {
      display: flex;
      width: max-content;
      gap: 0.5em;
      align-items: center;

      & span {
        width: max-content;
        flex: 0 0 auto;
      }
    }
  }

  .atc_form-button-spacer,
  .atc_form-button {
    min-height: 55px;
  }

  .atc_form-button {
    width: 100%;
    bottom: 0;
    left: 0;
    z-index: 4;
    height: 55px;
    display: flex;
    flex-direction: row;
    place-content: center;

    & span {
      font-weight: 400;
      display: none;
      margin-top: -.1rem;

      &::before {
        content: "| size: ";
        display: inline;
      }
    }

    &.is_sticky span {
      display: block;
    }

  }

  .is_sticky {
    position: fixed;
  }

  .to_sticky {
    animation: toSticky 300ms ease;
  }

  @keyframes toSticky {
    from {
      transform: translateY(100%);
    }

    to {
      transform: translateY(0);
    }
  }
}

.pdp-zoom-wrapper {
  position: fixed;
  inset: 0 0 0 0;
  z-index: 20;
  opacity: 0;
  transform: scale(0.95);
  transition: opacity 0.3s ease, transform 0.3s ease !important;
  background-color: var(--c-off-white);
  display: grid;
  place-content: center;
  pointer-events: none;

  &.visible {
    pointer-events: all;
  }
}

.pdp-zoom-panzoom {
  place-content: center;
  display: grid;
  position: relative;
  width: 100vw;
  height: 100vh;
  translate: 0 0;
  transition: translate 0.1s ease-out;
  grid-area: 1 / 1;
}

.pdp-zoom-prev-btn.round-btn,
.pdp-zoom-next-btn.round-btn {
  display: none;
}

.pdp-zoom-panzoom.prev {
  translate: -100% 0;
}

.pdp-zoom-panzoom.prev:has(img)~.pdp-zoom-prev-btn.round-btn {
  display: grid;
}

.pdp-zoom-panzoom.next {
  translate: 100% 0;
}

.pdp-zoom-panzoom.next:has(img)~.pdp-zoom-next-btn.round-btn {
  display: grid;

}

.pdp-zoom-img {
  width: auto;
}

.pdp-zoom-btn.round-btn,
.pdp-zoom-close-btn.round-btn,
.pdp-zoom-prev-btn.round-btn,
.pdp-zoom-next-btn.round-btn,
.pdp-zoom-reset-btn.round-btn,
.pdp-zoom-range {
  position: absolute;
  background-color: white;
  right: 2em;
  top: calc(1.5em + 40px);
  scale: 1;
  transition: scale 0.2s ease;

  &:hover {
    scale: 1.1
  }

  & svg {
    width: 15px;
    height: 15px;
    stroke: var(--c-dark-grey);
    position: absolute;
  }
}

.pdp-zoom-prev-btn.round-btn,
.pdp-zoom-next-btn.round-btn,
.pdp-zoom-close-btn.round-btn {
  right: 50%;
  bottom: 3rem;
  top: auto;
  translate: 50% 0;
  height: 40px;
  width: 40px;
}

.pdp-zoom-prev-btn.round-btn {
  translate: calc(50% - 50px) 0;
}

.pdp-zoom-next-btn.round-btn {
  translate: calc(50% + 50px) 0;
}

.pdp-zoom-reset-btn.round-btn {
  right: 2em;
  bottom: 3rem;
  top: auto;
  height: 40px;
  width: 40px;
}

input.pdp-zoom-range {
  bottom: 150px;
  bottom: calc(3rem + 50px);
  top: auto;
  -webkit-appearance: slider-vertical;
  appearance: slider-vertical;
  width: 40px;
  height: 125px;
  position: absolute;
  right: 2em;
  transition: all 0.1s;
  background-color: white;
  margin: 0;
}

.pdp-carousel-wrapper {
  position: relative;
  height: min-content;
  width: 100%;

  & .loader {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }

  & .iWish-btn {
    position: absolute;
    top: 1.5em;
    right: 2em;
  }
}

pdp-carousel {
  aspect-ratio: 0.723;
  width: 100%;
  overflow-x: auto;
  display: flex;
  flex-flow: row wrap;
  scroll-snap-align: start;
  scroll-snap-type: x mandatory;
  scrollbar-width: thin;
  max-height: calc(100vh - 88px);
  max-height: none;
  overflow: hidden;
  scroll-margin-top: 50px;
  transition: max-height 0.5s var(--bezier);

  &>.pdp_slide:nth-child(n + 2) {
    display: none;
  }

  & .splide__list {
    width: 100%;
  }

  & .pdp_slide {
    width: 100%;
    height: auto;
  }

  & .splide__pagination {
    position: absolute;
    bottom: 20px;
    left: 50%;
    translate: -50% 0;
    width: max-content;
    max-width: 90%;
    backdrop-filter: blur(2px);
    background-color: color-mix(in srgb, var(--c-black), transparent 90%);
    padding: 7px 14px;
    border-radius: 14px;
    gap: 7px;
    place-content: center;
    border: 1px solid color-mix(in srgb, var(--c-black), transparent 90%);

    & li {
      display: grid;
      place-items: center;
    }

    & button {
      border-radius: 50%;
      height: 7px;
      width: 7px;
      opacity: 0.75;
      padding: 0;
      border: none;
      margin: 0;

      &.is-active {
        background-color: var(--c-white);
        opacity: 1;
      }
    }
  }
}

#product-details {
  scroll-margin-top: 50px;
  max-width: 90vw;
  margin: 1rem auto;

  & #product-summary {
    display: grid;
    grid-template-columns: 6fr 4fr;
    column-gap: 1em;

    & .yotpo-widget-instance {
      grid-area: 2 / 2 / 3 / 3;
      display: block;
      display: flex;
      justify-content: flex-end;
      scroll-margin-top: 100px;
    }
  }

  & .Title {
    grid-area: 1 / 1 / 2 / 3;
    display: flex;
    justify-content: space-between;
    gap: 1rem;
  }

  & .Price--wrapper {
    grid-area: 2 / 1 / 3 / 2;

    & span {
      font-weight: 700;
    }
  }

  & .Price--wrapper,
  & h1.title {
    font-size: var(--txt-h4);
    gap: 0.4em;
    margin: 0;
    text-transform: none;
    letter-spacing: normal;
    font-family: var(--text-font-family);
    text-align: left;
    font-weight: 400;
    flex-wrap: wrap;
  }

  & .Price--saving {
    margin: 0 auto 0 0;
  }
}

.pdp-tabs h4 {
  text-align: left;
}

.countdown-wrapper {
  text-align: center;
  margin-top: 0;
  width: 100%;
}

.product_details-sizing {
  display: flex;
  justify-content: space-between;
  flex-flow: row nowrap;
  gap: .5em;
  margin: 0;

  .BIS_trigger {
    margin: 0;
  }
}

.BIS_trigger.BIS_overlay {
  position: absolute;
  height: 100%;
  padding: 0;
  margin: 0;
  width: 100%;
  max-width: 100%;

  & svg {
    position: absolute;
    top: 5px;
    left: 5px;
    opacity: 0.5;
  }
}

.product_details-confidence-blocks {
  margin-top: 0.75rem;

  & .confidence_blocks-block {
    margin: 0;
    display: flex;
    align-items: center;
    gap: 1em;

    a {
      color: var(--c-dark-grey);
    }

    & svg {
      width: 2em;
      color: var(--c-dark-grey);
    }

    &>*:last-child {
      flex: 1 1 100%;
    }

    &:hover {
      & svg.ani-drive {
        animation: drive 1s;
      }

      & svg.ani-spin {
        animation: spin 1s;
      }

      & svg.ani-bounce {
        animation: bounce 1s;
      }
    }
  }

  & .window {
    overflow: hidden;
    width: 2.1em;
  }

  & .date {
    color: var(--c-success);
  }
}

.section--product_main {
  & .accordian-content {
    margin: 0 10px;
  }
}

.colour-selection {
  margin-top: 1em;
  border-top: 1px solid var(--c-light-grey);
  padding-top: 1em;

  & p {
    margin-bottom: 1em;
  }
}

.colour-grid {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 10px;
  width: 100%;
}

.colour-swatches {
  width: 100%;
  margin: 0px;
  aspect-ratio: 1;
  border: 1px solid white;
  position: relative;

  &>img {
    margin-bottom: -0.5em;
    height: 100%;
  }

  &.active {
    border-color: var(--c-black);
    cursor: default;
  }

  & .tooltip {
    display: none;
    position: absolute;
    background: var(--c-off-white);
    padding: 0.5em;
    top: calc(100% - 5px);
    left: 50%;
    transform: translateX(-25%);
    width: max-content;
    box-shadow: 0 0 4px -2px var(--c-dark-grey);

    &::after {
      content: "";
      display: block;
      position: absolute;
      top: -9px;
      width: 15px;
      height: 10px;
      clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
      background-color: var(--c-off-white);
    }
  }

  &:hover {
    z-index: 1;
    filter: brightness(1.15);

    & .tooltip {
      display: block;
    }
  }

  /* & img {
    object-position: top;
  } */
}

thumbnail-carousel {
  display: none;
}

form .quantity-warning {
  width: 100%;
  text-align: center;
  height: 0;
  overflow: hidden;
  transition: height 0.2s var(--bezier), padding 0.2s var(--bezier), margin 0.2s var(--bezier);
  padding-block: 0;
  margin: 0;
  display: inline-block;
  font-size: var(--txt-sm);

  &.warning-active {
    height: min-content;
    padding-block: 0.5em;
    margin: 0.5em 0 0;
    font-weight: 700;
    letter-spacing: 0.15ch;
  }
}

@media screen and (width >=768px) {

  pdp-carousel {
    max-height: fit-content !important;
    /* override the size adjustment made for mobile with js */
  }

  .product_details-confidence-blocks {
    display: flex;
    flex-direction: column;
    gap: 0.5em;
  }

  .section--product_main {
    padding: 2vh 0 0;
    width: min(90%, 1270px);
    margin: 1em auto 0;
    display: grid;
    grid-template-columns: 1fr minmax(368px, 400px);
    grid-template-rows: max-content 1fr;
    gap: 1em;

    & bnpl-options {
      margin-block: 0.5em;
    }

    & .Title {
      align-items: flex-start;

      & .colour {
        margin-top: calc((var(--txt-h4) - (var(--txt-sm) / 2)) / 2);
      }
    }

    & .pdp-carousels-wrapper {
      grid-area: 1 / 1 / 2 / 2;
      min-width: 310px;
    }

    & #product-details {
      grid-area: 1 / 2 / 3 / 3;
      position: sticky;
      top: calc(50px + 1em + 2vh);
      height: min-content;
      padding-top: 0;
      margin-top: 0;
    }

    & content-accordian {
      grid-area: 2 / 1 / 3 / 2;
      width: 100%;
    }
  }
}

@media screen and (width >=1200px) {

  .pdp-carousels-wrapper {
    display: flex;
    gap: 10px;
    height: min-content;
  }

  thumbnail-carousel {
    display: block;
    width: 150px;
    flex: 1 0 150px;
    opacity: 0;
    transition: opacity 0.2s ease;

    &.splide {
      opacity: 1;
      width: 150px
    }

    & .thumbs_slide {
      border: 2px solid transparent;
    }

    & .is-active {
      border: 2px solid var(--c-dark-grey);
      overflow: hidden;
    }

    & img {
      width: 100%;
      height: 100%;
    }
  }
}

